@@ -41,6 +41,9 @@ New Features
 7. SOLR-891:  A Transformer to read strings from Clob type.
               (Noble Paul via shalin)
 
+8. SOLR-812:  Configurable JDBC settings in JdbcDataSource including optimized defaults for read only mode.
+              (David Smiley, Glen Newton, shalin)
+
 Optimizations
 ----------------------
 1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
